fix: Add scroll bar to annotation pane if content too long

--- a/annotate/static/annotate-style.css
+++ b/annotate/static/annotate-style.css
@@ -38,6 +38,7 @@
 }
 .annotation-container {
   grid-area: annotation-container;
+  overflow-x: hidden;
 }
 
 li.file-link {
